[gd_scene load_steps=4 format=3 uid="uid://c4lob0pu3s8s2"]

[ext_resource type="Texture2D" uid="uid://bt80c6mhd022i" path="res://rehab/SadCat/sc1.png" id="1_4odf0"]
[ext_resource type="Script" path="res://rehab/SadCat.gd" id="2_o3kpf"]
[ext_resource type="FontFile" uid="uid://bx22ahrce87rx" path="res://assets/CreatiCredad.ttf" id="4_dgbet"]

[node name="SadCat" type="TextureButton" node_paths=PackedStringArray("progBar", "dialogueBox", "catName")]
offset_right = 200.0
offset_bottom = 200.0
texture_normal = ExtResource("1_4odf0")
script = ExtResource("2_o3kpf")
progBar = NodePath("ProgressBar")
dialogueBox = NodePath("ColorRect/DialogeBox")
catName = NodePath("ColorRect/Label")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = -37.0
offset_right = -12.0
offset_bottom = 200.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 207.0
offset_right = 600.0
offset_bottom = 200.0
color = Color(0.454902, 0.447059, 0.392157, 1)

[node name="DialogeBox" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 59.0
offset_right = 386.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("4_dgbet")
theme_override_font_sizes/font_size = 21
text = "cscs"
autowrap_mode = 3

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 351.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("4_dgbet")
theme_override_font_sizes/font_size = 22
text = "Name"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
